--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,55 @@
+/* noto-sans-jp-regular - latin_japanese */
+@font-face {
+  font-family: 'MyFont';
+  src: url('./fonts/noto-sans-jp-v42-latin_japanese-regular.woff') format('woff'),
+    url('./fonts/noto-sans-jp-v42-latin_japanese-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-#content {
-  margin: 0 auto;
-  max-width: 1200px;
+html {
+  font-family: 'MyFont';
 }
+
+p {
+  font-size: 24px;
+  line-height: 1.6;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 4rem;
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  /* margin: 0 auto;
+  max-width: 800px;
+  color: #262626; */
+}
+
+.nav-links {
+  display: flex;
+}
+
+.nav-link {
+  padding: 2rem 2rem;
+}
+
+.nav-link:last-child {
+  padding-right: 0;
+}
+
+.title {
+  font-size: 42px;
+}
+
