--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 html {
@@ -81,10 +82,6 @@ header {
   text-decoration: underline;
 }
 
-.section-margin {
-  margin-bottom: 12rem;
-}
-
 
 /* Hero Section */
 
@@ -99,7 +96,7 @@ header {
   justify-content: center;
 
   padding: 2rem;
-  
+  margin-bottom: 12rem;
 }
 
 .title-box {
@@ -123,6 +120,7 @@ header {
 .review-section {
   max-width: 1000px;
   margin: 0 auto;
+  margin-bottom: 12rem;
 }
 
 .review-header-box {
@@ -137,6 +135,8 @@ header {
 .review-header {
   color: #432818;
   font-size: 44px;
+  width: 100%;
+  text-align: center;
 }
 
 .line {
@@ -156,7 +156,6 @@ header {
 .review-card {
   padding: 2rem;
   border-radius: 6px;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
 }
 
 .review {
@@ -166,5 +165,25 @@ header {
 
 .review-author {
   font-size: 18px;
-  text-align: right;
+}
+
+.hours-section {
+  color: #eee;
+  background-color: #99582a;
+  max-width: fit-content;
+  margin: 0 auto;
+
+  padding: 4rem;
+  margin-bottom: 4rem;
+  border-radius: 6px;
+}
+
+.hours-header {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+
+.hours {
+  padding: 0.4rem;
+  text-align: center;
 }
