--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ header {
 /* Hero Section */
 
 .hero-section {
-  background: url('./hero-img.jpg');
+  background: url('./imgs/hero-img.jpg');
   background-size: cover;
   width: 100vw;
   height: 40rem;
@@ -125,6 +125,7 @@ header {
 
 .review-header-box {
   display: flex;
+
   align-items: center;
   justify-content: center;
 
@@ -186,4 +187,50 @@ header {
 .hours {
   padding: 0.4rem;
   text-align: center;
+}
+
+.menu-section {
+  margin-top: 3rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  gap: 4rem;
+
+  color: #434;
+}
+
+.logo {
+  height: 14.4rem;
+  width: 15rem;
+  border-radius: 10px;
+
+  cursor: pointer;
+}
+
+.menu-box {
+  margin-bottom: 6rem;
+}
+
+.menu-title-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu-title {
+  font-size: 36px;
+}
+
+.menu-line {
+  width: 50vw;
+  border: 2px solid #434;
+}
+
+.menu-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
 }
