--- a/src/style.css
+++ b/src/style.css
@@ -234,3 +234,106 @@ header {
   justify-content: space-between;
   padding: 1rem;
 }
+
+
+ /* CONTACT SECTION */
+
+.contact-info-box {
+  background: url('./imgs/contact-img.jpg');
+  background-size: cover;
+  width: 100vw;
+  height: 40rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 2rem;
+  margin-bottom: 12rem;
+}
+
+.contact-title {
+  font-size: 92px;
+  color: #eee;
+  font-weight: 500;
+}
+
+.contact-btn-box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.btn {
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+
+  color: #eee;
+  background-color: #99582a;
+
+  padding: 1rem 2rem;
+  border-radius: 6px;
+
+  cursor: pointer;
+}
+
+.btn:hover {
+  filter: brightness(80%);
+  transform: translateY(-10%);
+}
+
+.form {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  gap: 2rem;
+  width: 50rem;
+  margin-bottom: 4rem;
+}
+
+.form-box {
+  display: flex;
+  flex-direction: column;
+  grid-column: 1 / 3;
+
+  gap: 0.4rem;
+  font-size: 20px;
+}
+
+input,
+textarea {
+  padding: 0.4rem;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+}
+
+input {
+  height: 2rem;
+}
+
+textarea {
+  height: 10rem;
+  font-family: 'MyFont';
+}
+
+.form-btn {
+  color: #fff;
+  background-color: #d35400;
+  border: none;
+
+  grid-column: 1 / 3;
+  padding: 1rem;
+  width: 100%;
+
+  font-size: 24px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.form-btn:hover {
+  filter: brightness(80%);
+}
